# curik

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  course.yml  justfile  pyproject.toml  theme.toml
.clasi/: clasi-version
.claude/: settings.json
.claude/rules/: clasi-artifacts.md  source-code.md
assets/css/: main.css
curik/: __init__.py  assets.py  changes.py  cli.py  hugo.py  init_command.py  layout_check.py  layout_migrate.py  migrate.py  paths.py  project.py  publish.py  quiz.py  readme.py  research.py  scaffolding.py  server.py  syllabus.py  templates.py  validation.py
curik.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
curik/agents/: curriculum-architect.md  lesson-author-older.md  lesson-author-young.md  research-agent.md  reviewer.md  start-curik.md
curik/init/: claude-section.md  curik-skill.md  deploy-pages.yml  gitignore  justfile
curik/references/: activity-mappings.md  course-taxonomy.md  curriculum-process.md  hugo-conventions.md  instructor-guide-requirements.md  lesson-page-template.md  process-guide.md
curik/skills/: alignment-decision.md  change-plan-execution.md  content-conversion.md  course-concept.md  existing-content-analysis.md  lesson-writing-older.md  lesson-writing-young.md  pedagogical-model.md  quiz-authoring.md  readme-guards.md  repo-scaffolding.md  (+6 more)
curriculum-hugo-theme/: theme.toml
docs/: curik-mcp-server-spec.md  curik-project-plan-v1.md  curik-project-plan-v2.md
scripts/: bump-version.sh
tests/: test_assets_research.py  test_change_cycle_integration.py  test_changes.py  test_cli.py  test_content.py  test_e2e.py  test_hugo.py  test_init_command.py  test_instruction_files.py  test_integration_hugo.py  test_layout_check.py  test_layout_migrate.py  test_mcp_server.py  test_migration.py  test_missing_skills.py  test_paths.py  test_process_discovery.py  test_project.py  test_publish.py  test_readme.py  test_resource_collection.py  test_scaffolding.py  test_sequester.py  test_sub_phases.py  test_syllabus.py  test_uid.py  test_validation_enhanced.py  test_validation_quiz.py
(+423 files in other folders)
