[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "curik"
version = "0.20260311.5"
description = "Curriculum development tool for the League of Amazing Programmers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "League Infrastructure" }]
dependencies = ["mcp>=1.0"]

[project.scripts]
curik = "curik.cli:main"

[tool.setuptools]
packages = ["curik", "curik.agents", "curik.skills"]

[tool.setuptools.package-data]
"curik.agents" = ["*.md"]
"curik.skills" = ["*.md"]
