[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "curik"
version = "0.20260314.7"
description = "Curriculum development tool for the League of Amazing Programmers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "League Infrastructure" }]
dependencies = [
    "jtl-syllabus>=1.20250530.4",
    "mcp>=1.0",
]

[project.scripts]
curik = "curik.cli:main"

[tool.setuptools]
packages = ["curik", "curik.agents", "curik.skills", "curik.references", "curik.init"]

[tool.setuptools.package-data]
"curik.agents" = ["*.md"]
"curik.skills" = ["*.md"]
"curik.references" = ["*.md"]
"curik.init" = ["*.md", "*.yml", "gitignore"]
